api/swim_form/src/tests/derive/form/unknown_container_attr.stderr
error: Unknown container attribute
  --> $DIR/src/tests/derive/form/unknown_container_attr.rs:18:14
   |
18 |     #[derive(Form)]
   |              ^^^^
